--- a/hangman.ipynb
+++ b/hangman.ipynb
@@ -7,11 +7,19 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "import urllib.request\n",
+    "\n",
+    "\n",
+    "url = \"https://raw.githubusercontent.com/kkanho/hangman/main/dictionary.txt\"\n",
     "\n",
     "#get all the word from the dictionary\n",
-    "file = open('./dictionary.txt','r')\n",
-    "content = file.readlines()\n",
-    "file.close()\n",
+    "file = urllib.request.urlopen(url).read().decode('UTF-8') #string\n",
+    "content = file.splitlines()\n",
+    "\n",
+    "# file = open('./dictionary.txt','r')\n",
+    "# content = file.readlines()\n",
+    "# file.close()\n",
+    "\n",
     "\n",
     "#select a random word from the dictionary\n",
     "ans = list(random.choice(content).strip().lower())\n",
@@ -71,7 +79,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.5"
+   "version": "3.0.0"
   }
  },
  "nbformat": 4,
